# based-renderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Findglm.cmake  based_renderer.sublime-project  conanfile.txt
src/: app.cpp  app.h  cube.slang  main.cpp  pch.hpp  renderer.cpp  shader.slang  triangle.slang
